--- a/app/src/main/res/layout/dialog_cards_match.xml
+++ b/app/src/main/res/layout/dialog_cards_match.xml
@@ -3,7 +3,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 16.03.20 15:31
+  ~ Last modified 23.03.20 18:31
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -12,8 +12,7 @@
 
 <layout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools">
+	xmlns:app="http://schemas.android.com/apk/res-auto">
 
 	<data>
 
@@ -40,7 +39,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 
-			android:text="ITS A MATCH!"
+			android:text="@string/tv_its_a_match"
 			android:textSize="24sp"
 			style="@style/regular_text"
 
@@ -55,6 +54,7 @@
 			android:id="@+id/matched_photo"
 			android:layout_width="300dp"
 			android:layout_height="300dp"
+			android:contentDescription="@string/description_user_photo"
 
 			app:bindImageUrl="@{photoUrl}"
 
@@ -63,7 +63,7 @@
 			app:layout_constraintTop_toTopOf="parent"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintVertical_bias="0.3"
-			tools:ignore="ContentDescription" />
+			/>
 
 		<TextView
 			android:id="@+id/tvMatchedName"
@@ -85,7 +85,7 @@
 			android:layout_height="wrap_content"
 
 			android:fontFamily="@font/rubik_bold"
-			android:text="Back to swiping"
+			android:text="@string/tv_back_to_swiping"
 			android:textColor="@color/gradient1"
 			android:textSize="28sp"
 
