--- a/app/src/main/res/layout/fragment_pairs.xml
+++ b/app/src/main/res/layout/fragment_pairs.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 22.03.20 16:22
+  ~ Last modified 23.03.20 18:31
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -56,7 +56,7 @@
 			android:layout_height="wrap_content"
 			android:gravity="center"
 
-			android:text="There is no matches...\n\nKeep swiping!"
+			android:text="@string/fragment_pairs_explanation_text"
 			android:textSize="24sp"
 			app:visibilityInvisible='@{viewModel.showTextHelper}'
 
