--- a/app/src/main/res/menu/chat_menu.xml
+++ b/app/src/main/res/menu/chat_menu.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 25.02.20 16:09
+  ~ Last modified 24.03.20 15:49
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -21,7 +21,7 @@
 	<item
 		android:id="@+id/chat_action_report"
 		android:icon="@drawable/ic_flag_24dp"
-		android:title="Жалоба"
+		android:title="@string/menu_report_text"
 		app:showAsAction="ifRoom" />
 
 
