--- a/app/src/main/res/menu/profile_view_menu.xml
+++ b/app/src/main/res/menu/profile_view_menu.xml
@@ -1,7 +1,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 24.03.20 15:57
+  ~ Last modified 26.03.20 18:17
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -12,8 +12,13 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto">
 
 	<item
-		android:id="@+id/action_report"
+		android:id="@+id/profile_action_report"
 		android:title="@string/menu_report_text"
+		app:showAsAction="never" />
+
+	<item
+		android:id="@+id/profile_action_unmatch"
+		android:title="@string/menu_unmatch_text"
 		app:showAsAction="never" />
 
 </menu>
