added reports feature

--- a/app/src/main/res/layout/fragment_main_flow.xml
+++ b/app/src/main/res/layout/fragment_main_flow.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 13.03.20 16:27
+  ~ Last modified 27.03.20 19:20
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -67,7 +67,7 @@
 			app:backgroundTint="@color/lolite_selected_tint"
 			app:tint="@color/white_tint_selected"
 
-			app:elevation="@null"
+			app:elevation="0dp"
 			app:fabSize="auto"
 			app:layout_anchorGravity="top|center"
 
